# lintel

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .tool-versions  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  Taskfile.yaml  docker-compose.yml  implementation.md  mkdocs.yml  openapi.json  pyproject.toml  test-result-sample.txt
.claude/skills/: lintel-board-prioritise.md
.claude/skills/lintel-board-prioritise/: SKILL.md
.github/workflows/: ci.yml
browser-extension/: manifest.json
browser-extension/src/: background.js  content.css  content.js  popup.css  popup.html  popup.js
docs/: architecture.md  events.md  idea-to-delivery.md  local-dev.md  process-mining-flows.md  requirements.md  types-reference.md  vision.md
docs/architecture/: adr-001-one-package-per-crud-entity.md
docs/requirements/: REQ-020-generalised-workflow-stages.md  REQ-020-research-langgraph-dynamic-workflows.md  REQ-021-per-step-model-assignment.md  REQ-022-pipeline-visualisation-triggers-artifacts.md  REQ-023-claude-code-subscription-sandbox.md  REQ-024-telegram-whatsapp-channel-adapters.md  REQ-025-ai-firewall.md  REQ-026-git-event-listeners.md  REQ-027-tech-stack-discovery.md  REQ-028-workflow-node-classes.md  REQ-029-pipeline-step-timeout.md  REQ-030-project-commit-pr-metrics.md  REQ-031-sandbox-storage-limits.md  REQ-032-scheduled-and-triggered-jobs.md  REQ-033-authentication-and-multi-tenancy.md  REQ-034-evolutionary-agent-orchestration.md  REQ-035-parallel-agent-execution.md  REQ-036-pipeline-stage-retry.md  REQ-037-sandbox-lifecycle-management.md  REQ-038-compliance-policy-validation.md  agents.md  delivery-loop.md  entities.md  events.md  feature-request-flow.md  future-requirements.md  guardrails.md  integrations.md  metrics.md
docs/research/: multi-agent-teams-research.md  software-factory-ui-research.md  ui-component-specs.md
docs/site/: architecture.md  getting-started.md  index.md  packages.md  workflow-authoring.md
docs/superpowers/plans/: 2026-03-14-automations-ui.md  2026-03-14-automations.md  2026-03-14-contracts-dissolution.md  2026-03-14-pipeline-continuation.md  2026-03-14-projection-infrastructure.md  2026-03-14-streaming-sandbox-execute.md  2026-03-15-app-package-extraction.md
docs/superpowers/specs/: 2026-03-14-automations-design.md  2026-03-14-automations-ui-design.md  2026-03-14-contracts-dissolution-design.md  2026-03-14-projection-infrastructure-design.md  2026-03-15-app-package-extraction-design.md  2026-03-15-file-decomposition-design.md
docs/tech-stack/: api.yaml
migrations/: 001_create_event_store.sql  002_create_pii_vault.sql  003_create_entities.sql  004_seed_agents_skills_workflows.py  004_seed_agents_skills_workflows.sql  005_run_metadata.sql  006_add_global_position.sql  007_create_step_model_overrides.sql  008_add_channel_type_and_connections.sql  008_create_integration_patterns.sql  008_create_memory_store.sql  009_seed_integration_patterns.sql  010_add_artifact_storage_backend.sql  010_create_human_interrupts.sql  010_create_test_results.sql  011_create_coverage_metrics.sql  012_create_quality_gate_rules.sql  012_human_interrupts_add_columns.sql  013_add_timed_out_status.sql  014_add_gdrive_source_url_to_policies.sql  014_create_cost_metrics.sql  014_create_guardrail_rules.sql  014_create_report_versions.sql  014_create_subscriber_positions.sql  015_add_hook_fields_to_triggers.sql  015_add_sandbox_storage_tracking.sql  015_add_webhook_support.sql  015_approval_projections.sql  015_create_evolutionary_strategies.sql  015_create_knowledge_graph.sql  015_create_notification_preferences.sql  015_create_review_reports.sql  015_create_run_metrics.sql  015_create_users.sql  015_human_interrupts_confidence_correction.sql  016_create_notification_templates.sql  016_create_review_scores.sql
mk/: ollama.mk  quality.mk  server.mk  tests.mk  ui.mk
ops/: docker-compose.yaml
scripts/: affected-packages.sh  dev-tmux.sh  export_openapi.py  generate_package_catalogue.py  lintel-ai.sh  migrate_artifacts_to_object_storage.py
src/lintel/: config.py
src/lintel/agents/: runtime.py  sandbox_tools.py
src/lintel/api/: app.py  deps.py
src/lintel/contracts/: commands.py  data_models.py  errors.py  events.py  protocols.py  stream_events.py  types.py  workflow_models.py
src/lintel/domain/: chat_router.py  command_dispatcher.py  compliance_seed.py  event_dispatcher.py  graph_compiler.py  scheduler_loop.py  seed.py  step_modifiers.py  trigger_handler.py  workflow_executor.py
src/lintel/skills/: discover_test_command.py
src/lintel/workflows/: feature_to_pr.py  registry.py  state.py
tests/: conftest.py
tests/e2e/: test_claude_code_sandbox.py
tests/fixtures/sample-python-project/: Makefile  pyproject.toml
tests/integration/: test_api.py  test_event_store.py  test_full_pipeline.py  test_guardrail_rules.py  test_integration_patterns_pipeline.py  test_pii_pipeline.py  test_pii_vault.py  test_postgres_chat_store.py  test_review_and_improve_workflow.py  test_workflow_lifecycle.py
tests/integration/sandbox/: conftest.py  fake_runtime.py  test_failure_modes.py  test_pipeline_stages.py  test_smoke.py  test_stages.py  test_storage_limits.py
tests/unit/: test_config.py
tests/unit/agents/: test_runtime.py  test_runtime_mcp.py  (+1 more)
todos/2026-03-05-init-product-spec-architecture/: TEAM_PROMPT.md  architecture.md  implementation_checklist.md  index.md  plan.md  product-spec.md  research.md
todos/2026-03-06-agent-sandbox-abstraction/: implementation_checklist.md  index.md  plan.md  research.md
todos/2026-03-06-create-ui/: implementation_checklist.md  index.md  plan.md  research.md
todos/2026-03-06-create-ui-completed/: research.md
todos/2026-03-07-concourse-ci-investigation/: implementation_checklist.md  research.md  task.md
todos/2026-03-07-concourse-ci-investigation-completed/: plan.md  task.md
todos/2026-03-07-local-ollama-models-completed/: index.md
todos/2026-03-10-stage-multi-attempt-and-ui/: index.md
ui/: index.html  orval.config.ts  package-lock.json  package.json  vite.config.ts
(+488 files in other folders)
