[project]
name = "lintel-workspace"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "SIM", "TCH", "RUF"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["lintel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
testpaths = [
    "packages/contracts/tests",
    "packages/agents/tests",
    "packages/workflows/tests",
    "packages/app/tests",
    "packages/event-store/tests",
    "packages/event-bus/tests",
    "packages/persistence/tests",
    "packages/sandbox/tests",
    "packages/pii/tests",
    "packages/observability/tests",
    "packages/models/tests",
    "packages/slack/tests",
    "packages/repos/tests",
    "packages/coordination/tests",
    "packages/projections/tests",
    "packages/api-support/tests",
    "packages/users/tests",
    "packages/teams/tests",
    "packages/policies-api/tests",
    "packages/notifications-api/tests",
    "packages/environments-api/tests",
    "packages/variables-api/tests",
    "packages/credentials-api/tests",
    "packages/audit-api/tests",
    "packages/approval-requests-api/tests",
    "packages/boards/tests",
    "packages/triggers-api/tests",
    "packages/artifacts-api/tests",
    "packages/projects-api/tests",
    "packages/work-items-api/tests",
    "packages/skills-api/tests",
    "packages/agent-definitions-api/tests",
    "packages/mcp-servers-api/tests",
    "packages/ai-providers-api/tests",
    "packages/models-api/tests",
    "packages/repositories-api/tests",
    "packages/workflow-definitions-api/tests",
    "packages/settings-api/tests",
    "packages/compliance-api/tests",
    "packages/experimentation-api/tests",
    "packages/automations-api/tests",
    "packages/sandboxes-api/tests",
    "packages/pipelines-api/tests",
    "packages/chat-api/tests",
    "tests",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
namespace_packages = true
explicit_package_bases = true
mypy_path = [
    "packages/contracts/src",
    "packages/agents/src",
    "packages/infrastructure/src",
    "packages/workflows/src",
    "packages/app/src",
    "packages/event-store/src",
    "packages/event-bus/src",
    "packages/persistence/src",
    "packages/sandbox/src",
    "packages/pii/src",
    "packages/observability/src",
    "packages/models/src",
    "packages/slack/src",
    "packages/repos/src",
    "packages/coordination/src",
    "packages/projections/src",
    "packages/api-support/src",
    "packages/users/src",
    "packages/teams/src",
    "packages/policies-api/src",
    "packages/notifications-api/src",
    "packages/environments-api/src",
    "packages/variables-api/src",
    "packages/credentials-api/src",
    "packages/audit-api/src",
    "packages/approval-requests-api/src",
    "packages/boards/src",
    "packages/triggers-api/src",
    "packages/artifacts-api/src",
    "packages/projects-api/src",
    "packages/work-items-api/src",
    "packages/skills-api/src",
    "packages/agent-definitions-api/src",
    "packages/mcp-servers-api/src",
    "packages/ai-providers-api/src",
    "packages/models-api/src",
    "packages/repositories-api/src",
    "packages/workflow-definitions-api/src",
    "packages/settings-api/src",
    "packages/compliance-api/src",
    "packages/experimentation-api/src",
    "packages/automations-api/src",
    "packages/sandboxes-api/src",
    "packages/pipelines-api/src",
    "packages/chat-api/src",
]

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*"]
ignore_missing_imports = true
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = [
    "lintel.event_store.postgres",
    "lintel.event_store.migrate",
    "lintel.persistence.vault.postgres_vault",
]
disallow_untyped_calls = false

[dependency-groups]
dev = [
    "anthropic[bedrock]>=0.84.0",
    "pytest-xdist>=3.8.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-testmon>=2.1",
    "testcontainers[postgres,nats]>=4.9",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
]
