[project]
name = "lintel-workspace"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "SIM", "TCH", "RUF"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["lintel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
timeout = 30
testpaths = [
    "packages/contracts/tests",
    "packages/agents/tests",
    "packages/workflows/tests",
    "packages/app/tests",
    "packages/event-store/tests",
    "packages/event-bus/tests",
    "packages/persistence/tests",
    "packages/sandbox/tests",
    "packages/pii/tests",
    "packages/observability/tests",
    "packages/models/tests",
    "packages/slack/tests",
    "packages/channels/tests",
    "packages/telegram/tests",
    "packages/repos/tests",
    "packages/coordination/tests",
    "packages/projections/tests",
    "packages/api-support/tests",
    "packages/users/tests",
    "packages/teams/tests",
    "packages/policies-api/tests",
    "packages/kernel-policy-api/tests",
    "packages/notifications-api/tests",
    "packages/org-security-api/tests",
    "packages/environments-api/tests",
    "packages/env-prebuilds-api/tests",
    "packages/variables-api/tests",
    "packages/frontend-targets-api/tests",
    "packages/credentials-api/tests",
    "packages/audit-api/tests",
    "packages/approval-requests-api/tests",
    "packages/boards/tests",
    "packages/triggers-api/tests",
    "packages/cross-repo-test-api/tests",
    "packages/artifacts-api/tests",
    "packages/projects-api/tests",
    "packages/work-items-api/tests",
    "packages/skills-api/tests",
    "packages/agent-definitions-api/tests",
    "packages/mcp-servers-api/tests",
    "packages/ai-providers-api/tests",
    "packages/models-api/tests",
    "packages/repositories-api/tests",
    "packages/workflow-definitions-api/tests",
    "packages/settings-api/tests",
    "packages/compliance-api/tests",
    "packages/experimentation-api/tests",
    "packages/governance-api/tests",
    "packages/integration-patterns-api/tests",
    "packages/process-mining-api/tests",
    "packages/automations/tests",
    "packages/sandboxes-api/tests",
    "packages/pipeline-diagnostics-api/tests",
    "packages/pipelines-api/tests",
    "packages/chat-api/tests",
    "packages/memory/tests",
    "packages/memory-api/tests",
    "packages/auth-api/tests",
    "packages/privacy-controls-api/tests",
    "packages/agent-skills-api/tests",
    "packages/slack-notifications-api/tests",
    "packages/slack-review-api/tests",
    "packages/slack-workflows-api/tests",
    "packages/workflow-blueprints-api/tests",
    "packages/coding-rules-api/tests",
    "packages/visual-verification-api/tests",
    "packages/scheduled-tasks-api/tests",
    "packages/knowledge-api/tests",
    "packages/tech-spec-api/tests",
    "packages/sandbox-credentials-api/tests",
    "packages/improvement-api/tests",
    "packages/context-injection/tests",
    "packages/cross-repo-agent-api/tests",
    "packages/cve-remediation-api/tests",
    "packages/notion-adapter-api/tests",
    "packages/secret-rotation-api/tests",
    "packages/multi-tenancy-api/tests",
    "packages/multi-slack-bot-api/tests",
    "packages/cloud-environments-api/tests",
    "packages/agent-metrics-api/tests",
    "packages/bot-scope-api/tests",
    "packages/bots-api/tests",
    "packages/fleet-execution-api/tests",
    "packages/knowledge-graph-api/tests",
    "packages/repo-description-api/tests",
    "packages/channel-message-routing-api/tests",
    "packages/repo-auto-describe-api/tests",
    "packages/cloud-providers-api/tests",
    "tests",
]
norecursedirs = ["tests/fixtures"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
namespace_packages = true
explicit_package_bases = true
mypy_path = [
    "packages/contracts/src",
    "packages/agents/src",
    "packages/infrastructure/src",
    "packages/workflows/src",
    "packages/app/src",
    "packages/event-store/src",
    "packages/event-bus/src",
    "packages/persistence/src",
    "packages/sandbox/src",
    "packages/pii/src",
    "packages/observability/src",
    "packages/models/src",
    "packages/slack/src",
    "packages/channels/src",
    "packages/telegram/src",
    "packages/repos/src",
    "packages/coordination/src",
    "packages/projections/src",
    "packages/api-support/src",
    "packages/users/src",
    "packages/teams/src",
    "packages/policies-api/src",
    "packages/kernel-policy-api/src",
    "packages/notifications-api/src",
    "packages/org-security-api/src",
    "packages/environments-api/src",
    "packages/env-prebuilds-api/src",
    "packages/variables-api/src",
    "packages/frontend-targets-api/src",
    "packages/credentials-api/src",
    "packages/audit-api/src",
    "packages/approval-requests-api/src",
    "packages/boards/src",
    "packages/triggers-api/src",
    "packages/cross-repo-test-api/src",
    "packages/artifacts-api/src",
    "packages/projects-api/src",
    "packages/work-items-api/src",
    "packages/skills-api/src",
    "packages/agent-definitions-api/src",
    "packages/mcp-servers-api/src",
    "packages/ai-providers-api/src",
    "packages/models-api/src",
    "packages/repositories-api/src",
    "packages/workflow-definitions-api/src",
    "packages/settings-api/src",
    "packages/compliance-api/src",
    "packages/experimentation-api/src",
    "packages/governance-api/src",
    "packages/integration-patterns-api/src",
    "packages/process-mining-api/src",
    "packages/automations/src",
    "packages/sandboxes-api/src",
    "packages/pipeline-diagnostics-api/src",
    "packages/pipelines-api/src",
    "packages/chat-api/src",
    "packages/memory/src",
    "packages/memory-api/src",
    "packages/privacy-controls-api/src",
    "packages/agent-skills-api/src",
    "packages/ai-firewall-api/src",
    "packages/slack-notifications-api/src",
    "packages/slack-review-api/src",
    "packages/slack-workflows-api/src",
    "packages/workflow-blueprints-api/src",
    "packages/coding-rules-api/src",
    "packages/visual-verification-api/src",
    "packages/scheduled-tasks-api/src",
    "packages/knowledge-api/src",
    "packages/tech-spec-api/src",
    "packages/sandbox-credentials-api/src",
    "packages/improvement-api/src",
    "packages/context-injection/src",
    "packages/cross-repo-agent-api/src",
    "packages/cve-remediation-api/src",
    "packages/notion-adapter-api/src",
    "packages/secret-rotation-api/src",
    "packages/multi-tenancy-api/src",
    "packages/multi-slack-bot-api/src",
    "packages/cloud-environments-api/src",
    "packages/agent-metrics-api/src",
    "packages/bot-scope-api/src",
    "packages/bots-api/src",
    "packages/fleet-execution-api/src",
    "packages/knowledge-graph-api/src",
    "packages/repo-description-api/src",
    "packages/channel-message-routing-api/src",
    "packages/repo-auto-describe-api/src",
    "packages/cloud-providers-api/src",
]

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*"]
ignore_missing_imports = true
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["aioboto3", "aioboto3.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "lintel.skills_api.integration_scanning",
    "lintel.integration_patterns_api",
    "lintel.integration_patterns_api.*",
]
ignore_missing_imports = true
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = [
    "lintel.event_store.postgres",
    "lintel.event_store.migrate",
    "lintel.persistence.vault.postgres_vault",
]
disallow_untyped_calls = false

[dependency-groups]
dev = [
    "anthropic[bedrock]>=0.84.0",
    "pytest-xdist>=3.8.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-testmon>=2.1",
    "pytest-timeout>=2.3",
    "testcontainers[postgres,nats]>=4.9",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "qdrant-client>=1.9",
    "mkdocs-material>=9.7.6",
    "pymdown-extensions>=10.21.2",
]
