[project]
name = "lintel-workspace"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "SIM", "TCH", "RUF"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["lintel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
timeout = 30
testpaths = [
    "packages/agent-definitions-api/tests",
    "packages/agent-metrics-api/tests",
    "packages/agent-skills-api/tests",
    "packages/agents/tests",
    "packages/ai-firewall-api/tests",
    "packages/ai-providers-api/tests",
    "packages/api-support/tests",
    "packages/app/tests",
    "packages/approval-requests-api/tests",
    "packages/artifacts-api/tests",
    "packages/audit-api/tests",
    "packages/auth-api/tests",
    "packages/automations/tests",
    "packages/background-agents-api/tests",
    "packages/board-sync-api/tests",
    "packages/boards/tests",
    "packages/bot-runtime/tests",
    "packages/bot-scope-api/tests",
    "packages/bots-api/tests",
    "packages/browser-extension-api/tests",
    "packages/channel-adapter-registry-api/tests",
    "packages/channel-connections-api/tests",
    "packages/channel-message-routing-api/tests",
    "packages/channels/tests",
    "packages/chat-api/tests",
    "packages/cloud-environments-api/tests",
    "packages/cloud-providers-api/tests",
    "packages/codebase-index-api/tests",
    "packages/coding-rules-api/tests",
    "packages/compliance-api/tests",
    "packages/context-attachments-api/tests",
    "packages/context-injection/tests",
    "packages/contracts/tests",
    "packages/coordination/tests",
    "packages/credentials-api/tests",
    "packages/cross-repo-agent-api/tests",
    "packages/cross-repo-test-api/tests",
    "packages/cve-remediation-api/tests",
    "packages/data-retention-api/tests",
    "packages/digest-api/tests",
    "packages/domain/tests",
    "packages/drift-detection-api/tests",
    "packages/encryption-api/tests",
    "packages/env-prebuilds-api/tests",
    "packages/environments-api/tests",
    "packages/event-bus/tests",
    "packages/event-store/tests",
    "packages/experimentation-api/tests",
    "packages/feedback-api/tests",
    "packages/fleet-execution-api/tests",
    "packages/frontend-targets-api/tests",
    "packages/github-app-api/tests",
    "packages/governance-api/tests",
    "packages/improvement-api/tests",
    "packages/incidents-api/tests",
    "packages/infrastructure/tests",
    "packages/integration-patterns-api/tests",
    "packages/jira-adapter-api/tests",
    "packages/kernel-policy-api/tests",
    "packages/knowledge-api/tests",
    "packages/knowledge-graph-api/tests",
    "packages/mcp-servers-api/tests",
    "packages/memory/tests",
    "packages/memory-api/tests",
    "packages/models/tests",
    "packages/models-api/tests",
    "packages/multi-slack-bot-api/tests",
    "packages/multi-telegram-bot-api/tests",
    "packages/multi-tenancy-api/tests",
    "packages/multiplayer-sessions-api/tests",
    "packages/notifications-api/tests",
    "packages/notion-adapter-api/tests",
    "packages/observability/tests",
    "packages/org-security-api/tests",
    "packages/persistence/tests",
    "packages/pii/tests",
    "packages/pipeline-diagnostics-api/tests",
    "packages/pipelines-api/tests",
    "packages/policies-api/tests",
    "packages/privacy-controls-api/tests",
    "packages/proactive-triggers-api/tests",
    "packages/process-mining-api/tests",
    "packages/projections/tests",
    "packages/projects-api/tests",
    "packages/release-notes-api/tests",
    "packages/repo-auto-describe-api/tests",
    "packages/repo-description-api/tests",
    "packages/repos/tests",
    "packages/repositories-api/tests",
    "packages/sandbox/tests",
    "packages/sandbox-credentials-api/tests",
    "packages/sandbox-pool-api/tests",
    "packages/sandboxes-api/tests",
    "packages/scheduled-tasks-api/tests",
    "packages/secret-rotation-api/tests",
    "packages/settings-api/tests",
    "packages/skills-api/tests",
    "packages/slack/tests",
    "packages/slack-notifications-api/tests",
    "packages/slack-review-api/tests",
    "packages/slack-workflows-api/tests",
    "packages/stage-catalogue-api/tests",
    "packages/teams/tests",
    "packages/tech-spec-api/tests",
    "packages/telegram/tests",
    "packages/test-plan-api/tests",
    "packages/triggers-api/tests",
    "packages/trust-scores-api/tests",
    "packages/users/tests",
    "packages/variables-api/tests",
    "packages/visual-verification-api/tests",
    "packages/web-ide-api/tests",
    "packages/work-items-api/tests",
    "packages/workflow-acl-api/tests",
    "packages/workflow-blueprints-api/tests",
    "packages/workflow-definitions-api/tests",
    "packages/workflows/tests",
    "tests",
]
norecursedirs = ["tests/fixtures"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
namespace_packages = true
explicit_package_bases = true
mypy_path = [
    "packages/agent-definitions-api/src",
    "packages/agent-metrics-api/src",
    "packages/agent-skills-api/src",
    "packages/agents/src",
    "packages/ai-firewall-api/src",
    "packages/ai-providers-api/src",
    "packages/api-support/src",
    "packages/app/src",
    "packages/approval-requests-api/src",
    "packages/artifacts-api/src",
    "packages/audit-api/src",
    "packages/auth-api/src",
    "packages/automations/src",
    "packages/background-agents-api/src",
    "packages/board-sync-api/src",
    "packages/boards/src",
    "packages/bot-runtime/src",
    "packages/bot-scope-api/src",
    "packages/bots-api/src",
    "packages/browser-extension-api/src",
    "packages/channel-adapter-registry-api/src",
    "packages/channel-connections-api/src",
    "packages/channel-message-routing-api/src",
    "packages/channels/src",
    "packages/chat-api/src",
    "packages/cloud-environments-api/src",
    "packages/cloud-providers-api/src",
    "packages/codebase-index-api/src",
    "packages/coding-rules-api/src",
    "packages/compliance-api/src",
    "packages/context-attachments-api/src",
    "packages/context-injection/src",
    "packages/contracts/src",
    "packages/coordination/src",
    "packages/credentials-api/src",
    "packages/cross-repo-agent-api/src",
    "packages/cross-repo-test-api/src",
    "packages/cve-remediation-api/src",
    "packages/data-retention-api/src",
    "packages/digest-api/src",
    "packages/domain/src",
    "packages/drift-detection-api/src",
    "packages/encryption-api/src",
    "packages/env-prebuilds-api/src",
    "packages/environments-api/src",
    "packages/event-bus/src",
    "packages/event-store/src",
    "packages/experimentation-api/src",
    "packages/feedback-api/src",
    "packages/fleet-execution-api/src",
    "packages/frontend-targets-api/src",
    "packages/github-app-api/src",
    "packages/governance-api/src",
    "packages/improvement-api/src",
    "packages/incidents-api/src",
    "packages/infrastructure/src",
    "packages/integration-patterns-api/src",
    "packages/jira-adapter-api/src",
    "packages/kernel-policy-api/src",
    "packages/knowledge-api/src",
    "packages/knowledge-graph-api/src",
    "packages/mcp-servers-api/src",
    "packages/memory/src",
    "packages/memory-api/src",
    "packages/models/src",
    "packages/models-api/src",
    "packages/multi-slack-bot-api/src",
    "packages/multi-telegram-bot-api/src",
    "packages/multi-tenancy-api/src",
    "packages/multiplayer-sessions-api/src",
    "packages/notifications-api/src",
    "packages/notion-adapter-api/src",
    "packages/observability/src",
    "packages/org-security-api/src",
    "packages/persistence/src",
    "packages/pii/src",
    "packages/pipeline-diagnostics-api/src",
    "packages/pipelines-api/src",
    "packages/policies-api/src",
    "packages/privacy-controls-api/src",
    "packages/proactive-triggers-api/src",
    "packages/process-mining-api/src",
    "packages/projections/src",
    "packages/projects-api/src",
    "packages/release-notes-api/src",
    "packages/repo-auto-describe-api/src",
    "packages/repo-description-api/src",
    "packages/repos/src",
    "packages/repositories-api/src",
    "packages/sandbox/src",
    "packages/sandbox-credentials-api/src",
    "packages/sandbox-pool-api/src",
    "packages/sandboxes-api/src",
    "packages/scheduled-tasks-api/src",
    "packages/secret-rotation-api/src",
    "packages/settings-api/src",
    "packages/skills-api/src",
    "packages/slack/src",
    "packages/slack-notifications-api/src",
    "packages/slack-review-api/src",
    "packages/slack-workflows-api/src",
    "packages/stage-catalogue-api/src",
    "packages/teams/src",
    "packages/tech-spec-api/src",
    "packages/telegram/src",
    "packages/test-plan-api/src",
    "packages/triggers-api/src",
    "packages/trust-scores-api/src",
    "packages/users/src",
    "packages/variables-api/src",
    "packages/visual-verification-api/src",
    "packages/web-ide-api/src",
    "packages/work-items-api/src",
    "packages/workflow-acl-api/src",
    "packages/workflow-blueprints-api/src",
    "packages/workflow-definitions-api/src",
    "packages/workflows/src",
]

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*"]
ignore_missing_imports = true
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["aioboto3", "aioboto3.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "lintel.skills_api.integration_scanning",
    "lintel.integration_patterns_api",
    "lintel.integration_patterns_api.*",
]
ignore_missing_imports = true
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = [
    "lintel.event_store.postgres",
    "lintel.event_store.migrate",
    "lintel.persistence.vault.postgres_vault",
]
disallow_untyped_calls = false

[dependency-groups]
dev = [
    "anthropic[bedrock]>=0.84.0",
    "pytest-xdist>=3.8.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-testmon>=2.1",
    "pytest-timeout>=2.3",
    "testcontainers[postgres,nats]>=4.9",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "qdrant-client>=1.9",
    "mkdocs-material>=9.7.6",
    "pymdown-extensions>=10.21.2",
]
